# evaluatorx

./: LICENSE  README.md  pyproject.toml
evaluatorx/: __init__.py  depth.py
evaluatorx/evaluators/: depth.py  normal.py  segmentation.py  subject_driven.py
evaluatorx/meters/: average.py
evaluatorx/metrics/depth/: __init__.py  absrel.py  threshold_percentage.py
evaluatorx/metrics/image/: clip_score.py  dino_score.py  lpips.py  psnr.py  ssim.py
evaluatorx/metrics/normal/: angular_error.py
image_evaluators/: normal.py  segmentation.py  utils.py
image_evaluators/metrics/depth/: rmse.py
image_evaluators/metrics/image/: lpips.py  psnr.py  ssim.py
image_evaluators/metrics/normal/: __init__.py
