[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluatorx"
version = "0.0.1"
description = "Implements evaluators based on torch and torchvision"
authors = [
  { name="xyfJASON", email="xyfjason@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "numpy",
    "pandas",
    "Pillow",
    "scikit-learn==1.6.1",
    "scikit-image==0.24.0",
    "lpips==0.1.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xyfJASON/evaluatorx"
Issues = "https://github.com/xyfJASON/evaluatorx/issues"
